--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,8 @@
 
   <div [ngClass]="['game-container']">
   
-    <img #car id="car" [ngClass]="{'car': true, 'car-animation': isCarMoving}"   src="./assets/car.png"/>
-    <img #boy [ngClass]="{'boy': true,'boy-jump': jump }" [ngStyle]="{'left': boyLeft}" src="./assets/running-boy.png"/>
+    <img #car id="car" [ngClass]="{'car': true, 'car-animation': isCarMoving}"   src="./assets/car.png" alt="car"/>
+    <img #boy [ngClass]="{'boy': true,'boy-jump': jump }" [ngStyle]="{'left': boyLeft}" src="./assets/running-boy.png" alt="boy"/>
 
   </div>
 </div>
